ArtworkAlignment-CSS issues are fixed.

--- a/src/components/DSBP/index.scss
+++ b/src/components/DSBP/index.scss
@@ -12,6 +12,9 @@
     .margin-right {
       margin-right: 20px;
     }
+    .margin-Bottom {
+      margin-Bottom: 5px
+    }
     .p-datatable {
       height: calc(100% - 160px);
       .p-datatable-wrapper {
