--- a/src/components/ProjectSetup/index.scss
+++ b/src/components/ProjectSetup/index.scss
@@ -215,7 +215,7 @@ $width: 100%;
   // border-radius: 24px
   // width: $width;
   nav {
-    margin-left: 5px;
+    margin-left: 2px;
   }
 }
 
