--- a/src/components/Projects/CreateProject/index.scss
+++ b/src/components/Projects/CreateProject/index.scss
@@ -295,7 +295,8 @@ sup {
     border: 0.5px solid #595959;
     border-radius: 8px;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-    margin-top: 5px;
+    // margin-top: 5px;
+    margin-top: 7px;
   }
   .p-multiselect-panel .p-multiselect-header {
     padding: 0.75rem 1.25rem !important;
