--- a/src/components/Projects/MyProjects/index.scss
+++ b/src/components/Projects/MyProjects/index.scss
@@ -20,7 +20,7 @@ $fontWeight400: 400;
 // Datepicker for ProjectSetUp component Style End
 .myProjectAnddAllProjectList {
   .actions {
-    padding: 0 20px;
+    padding: 0 20px 0 27px;
   }
   .p-datatable > .p-datatable-wrapper {
     overflow: auto;
